# Convertool_2

./: .gitignore  CMakeLists.txt  README.md  a.out  convert.c  convert.h  convertermap.h  main.c  main2.c
ArchiveFile/: ArchiveFile.c  ArchiveFile.h
lib/ThreadPool/: mythreads.c
lib/paths/: paths.c  paths.h
libre_converter/: libre_converter.c  libre_converter.h
pdf_converter/: pdf_converter.c  pdf_converter.h
test_set/_metadata/: files.db
test_set/docCollection1/1/: 1.doc
test_set/docCollection1/2/: 2.doc
test_set/docCollection1/3/: 3.doc
test_set/docCollection1/4/: 4.doc
